--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Indie+Flower|Shrikhand|Spirax');
+
+
+
+
 h1{
     font-family: 'Shrikhand', cursive;
 }
@@ -20,16 +24,20 @@ a:hover {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
-  border: .05rem solid #fff;
+  border: .05rem solid #333;
 }
 
 html,
 body {
   height: 100%;
-  background-color: #333;
+  /* background-color: #333; */
 }
-
 body {
+    background-image:url("image/therapy.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+/* body {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -39,12 +47,15 @@ body {
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
+} */
 
 .cover-container {
   max-width: 42em;
 }
 
+.content {
+  margin: 0px 200px;
+}
 
 /*
  * Header
@@ -60,14 +71,14 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(0,0,0,0.5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(0,0,0, .25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -75,8 +86,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #000;
+  border-bottom-color: #000;
 }
 
 @media (min-width: 48em) {
@@ -105,5 +116,5 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+  color: rgba(0,0,0, .8);
 }
